--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
                 日本には 約200以上
                 のよさこい関連のお祭りがあると言われています。
               </p>
-              <p>あなたの住む町のすぐ近くでも行われていることでしょう。</p>
               <p>
                 一目見たらお気に入りのチームが見つかること間違いなし！勿論お祭りの雰囲気を楽しむのも良し！
               </p>
@@ -159,10 +158,7 @@
               </p>
               <p>日本全国で約200~300チームがあるといわれています。</p>
               <p>
-                あなたの住む町の近くでもたくさんのよさこいチームがあるはず！
-              </p>
-              <p>
-                是非気になるチームを見つけて、あなたも踊り子デビューしちゃいましょう！
+                是非近くで気になるチームを見つけて、あなたも踊り子デビューしちゃいましょう！
               </p>
               <h3><a href="team.html">チームを探してみる</a></h3>
             </div>
